--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,18 @@
-name: Build GH Pages
+name: Build and Deploy GH Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: main
 
 jobs:
-  build_gh_pages:
+  deploy_gh_pages:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-          strategy: auto
       - run: npm ci
       - run: npm run predeploy
       - run: npm run deploy
-          
+
