--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,18 +7,11 @@ on:
 jobs:
   deploy_gh_pages:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run predeploy
-    - run: npm run deploy
-
-
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: npm ci
+      - run: npm run predeploy
+      - run: npm run deploy
