add routing alias + create project card component

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
         "react-scroll": "^1.8.9"
     },
     "devDependencies": {
+        "@types/node": "^20.8.2",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@vitejs/plugin-react": "^4.0.0",
