--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@src/*": ["./src/*"],
-            "@assets/*": ["./src/assets/*"],
-            "@components/*": ["./src/components/*"]
+            "src/*": ["./src/*"],
         }
     }
 }
