--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
-        "react-scroll": "^1.8.9"
+        "react-scroll": "^1.8.9",
+        "uniqid": "^5.4.0"
     },
     "devDependencies": {
         "@types/node": "^20.8.2",
